// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniRefColumnConfiguration component should render column "common_taxon": common_taxon 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/1305"
    title="Streptococcus sanguinis, taxon ID 1305"
  >
    Streptococcus sanguinis
  </a>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "common_taxonid": common_taxonid 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/1305"
    title="Streptococcus sanguinis, taxon ID 1305"
  >
    1305
  </a>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "count": count 1`] = `
<DocumentFragment>
  1 member
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "created": created 1`] = `
<DocumentFragment>
  <time
    datetime="2021-02-10T00:00:00.000Z"
  >
    2021-02-10
  </time>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "from": from 1`] = `<DocumentFragment />`;

exports[`UniRefColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <span
    class="no-wrap accession-view"
  >
    <a
      class="accession"
      href="/uniref/UniRef100_A0A0B7GQ86"
    >
      UniRef100_A0A0B7GQ86
    </a>
  </span>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "identity": identity 1`] = `
<DocumentFragment>
  UniRef100
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "length": length 1`] = `
<DocumentFragment>
  730
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "members": members 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        href="/uniprotkb/A0A0B7GQ86"
      >
        A0A0B7GQ86
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "name": name 1`] = `
<DocumentFragment>
  Cluster: PTS system glucose-specific EIICBA component [includes: glucose permease IIC component glucose-specific phosphotransferase enzyme IIB component glucose-specific phosphotransferase enzyme IIA compon...
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "organism": organism 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        href="/taxonomy/1305"
        title="Streptococcus sanguinis, taxon ID 1305"
      >
        Streptococcus sanguinis
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "organism_id": organism_id 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        href="/taxonomy/1305"
        title="Streptococcus sanguinis, taxon ID 1305"
      >
        Streptococcus sanguinis
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "sequence": sequence 1`] = `
<DocumentFragment>
  <section
    class="sequence-container"
  >
    <div
      class="sequence"
    >
      <div
        class="sequence__sequence"
      >
        <svg>
          <text>
            M
          </text>
        </svg>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "types": types 1`] = `
<DocumentFragment>
  <span
    class="entry-title__status icon--unreviewed"
    title="This marks an unreviewed UniProtKB entry"
  >
    <test-file-stub />
  </span>
</DocumentFragment>
`;
